--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
     "docs:watch": "npm run docs:prepare && gitbook serve",
     "docs:publish": "npm run docs:clean && npm run docs:build && cp CNAME _book && cd _book && git init && git commit --allow-empty -m 'update book' && git checkout -b gh-pages && touch .nojekyll && git add . && git commit -am 'update book' && git push git@github.com:jfairbank/redux-saga-test-plan gh-pages --force"
   },
-  "typings": "./index.d.ts",
+  "typings": "index.d.ts",
   "typesVersions": {
     ">=3.6": {
       "*": [
-        "./types/ts3.6/*"
+        "types/ts3.6/*"
       ]
     },
     ">=3.2": {
       "*": [
-        "./types/*"
+        "types/*"
       ]
     }
   },
